--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "robofriends",
+  "homepage": "https://rotcivdev.github.io/robofriends/",
   "version": "0.1.0",
   "dependencies": {
     "gh-pages": "^3.2.0",
